// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirportForm renders successfully 1`] = `
<body>
  <div>
    <div>
      MockedBaseAirportForm - 
      Origin
    </div>
  </div>
</body>
`;

exports[`AirportForm when titile is Destination renders successfully 1`] = `
<body>
  <div>
    <div>
      MockedBaseAirportForm - 
      Destination
    </div>
  </div>
</body>
`;
